--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup 22</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/en/thumb/e/e3/2022_FIFA_World_Cup.svg/1200px-2022_FIFA_World_Cup.svg.png" type="image/x-icon">
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Google Fonts -->
@@ -15,8 +17,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- header -->
     <div class="container">
+        <!-- header -->
         <header>
             <div class="header-details">
                 <h1>The Greatest show on the earth</h1>
@@ -27,6 +29,103 @@
                 <img src="images/Banner Image.png" alt="">
             </div>
         </header>
+
+
+
+        <!-- Main -->
+        <main>
+            <section class="mini-nav">
+                <a href="">Upcomming Match</a>
+                <a href="">All Gropus</a>
+                <a href="" id="active-nav">Blog</a>
+            </section>
+            <section class="blogs-container">
+                <article class="blogs">
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <button>Transfer</button>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <button>Transfer</button>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <button>Transfer</button>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <button>Transfer</button>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <button>Transfer</button>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <button>Transfer</button>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                        </div>
+                    </div>
+                </article>
+                <a href="">View All</a>
+            </section>
+        </main>
     </div>
+
+
+
+    <!-- Footer -->
+    <footer>
+        <h3>Goal</h3>
+        <hr>
+        <p class="footer-nav">
+            <a href="">Contuct Us</a>
+            <a href="">Terms of Services</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Privacy Settings</a>
+            <a href="">Goal App</a>
+            <a href="">Goal Live</a>
+        </p>
+        <p class="social-icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </p>
+    </footer>
 </body>
 </html>
