--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <header>
             <div class="header-details">
                 <h1>The Greatest show on the earth</h1>
-                <p>The 2022 FIFA World Cup is scheduled to be the 22nd running of the FIFA World Cup competition, the quadrennial international men's football championship contested by the senior national teams of the member associations of FIFA. </p>
+                <div class="header-ellipsis">
+                    <p>This will be the first World Cup ever to be held in the Arab world, and the second World Cup held entirely in Asia after the 2002 tournament in South Korea and Japan.</p>
+                </div>
                 <a href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
             </div>
             <div class="header-img">
@@ -36,7 +38,7 @@
         <main>
             <section class="mini-nav">
                 <a href="">Upcomming Match</a>
-                <a href="">All Gropus</a>
+                <a href="">All Groups</a>
                 <a href="" id="active-nav">Blog</a>
             </section>
             <section class="blogs-container">
@@ -48,7 +50,7 @@
                         <div class="blog-details">
                             <button>Transfer</button>
                             <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span>&nbsp;&nbsp;&nbsp;<span><i class="fa-regular fa-message"></i> 23</span></p>
                         </div>
                     </div>
                     <div class="blog">
@@ -58,7 +60,7 @@
                         <div class="blog-details">
                             <button>Transfer</button>
                             <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span>&nbsp;&nbsp;&nbsp;<span><i class="fa-regular fa-message"></i> 23</span></p>
                         </div>
                     </div>
                     <div class="blog">
@@ -68,7 +70,7 @@
                         <div class="blog-details">
                             <button>Transfer</button>
                             <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span>&nbsp;&nbsp;&nbsp;<span><i class="fa-regular fa-message"></i> 23</span></p>
                         </div>
                     </div>
                     <div class="blog">
@@ -78,27 +80,27 @@
                         <div class="blog-details">
                             <button>Transfer</button>
                             <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span>&nbsp;&nbsp;&nbsp;<span><i class="fa-regular fa-message"></i> 23</span></p>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog hidden-for-tablet">
                         <div class="blog-img">
                             <img src="images/Blog Image.png" alt="">
                         </div>
                         <div class="blog-details">
                             <button>Transfer</button>
                             <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span>&nbsp;&nbsp;&nbsp;<span><i class="fa-regular fa-message"></i> 23</span></p>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog hidden-for-tablet">
                         <div class="blog-img">
                             <img src="images/Blog Image.png" alt="">
                         </div>
                         <div class="blog-details">
                             <button>Transfer</button>
                             <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span> <span><i class="fa-regular fa-message"></i> 23</span></p>
+                            <p><span><i class="fa-regular fa-clock"></i> 10hr</span>&nbsp;&nbsp;&nbsp;<span><i class="fa-regular fa-message"></i> 23</span></p>
                         </div>
                     </div>
                 </article>
@@ -122,9 +124,9 @@
             <a href="">Goal Live</a>
         </p>
         <p class="social-icons">
-            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-google-plus-g"></i>
         </p>
     </footer>
 </body>
