--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="container">
@@ -37,9 +37,9 @@
         <!-- Main -->
         <main>
             <section class="mini-nav">
-                <a href="">Upcomming Match</a>
+                <a href="index2.html">Upcomming Match</a>
                 <a href="">All Groups</a>
-                <a href="" id="active-nav">Blog</a>
+                <a href="index.html" id="active-nav">Blog</a>
             </section>
             <section class="blogs-container">
                 <article class="blogs">
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                 </article>
-                <a href="">View All</a>
+                <a href="" class="hidden-btn">View All</a>
             </section>
         </main>
     </div>
