--- a/index2.html
+++ b/index2.html
@@ -46,9 +46,13 @@
                 <div class="matches">
                     <div class="match">
                         <div class="match-top">
-                            <img src="images/Flag.png" alt="">
+                            <div class="match-img-1">
+                                <img src="images/Flag.png" alt="">
+                            </div>
                             <h4>VS</h4>
-                            <img src="images/germany Flag.png" alt="">
+                            <div class="match-img-2">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="match-bottom">
                             <h3>Germay VS France</h3>
@@ -57,9 +61,13 @@
                     </div>
                     <div class="match">
                         <div class="match-top">
-                            <img src="images/Flag.png" alt="">
+                            <div class="match-img-1">
+                                <img src="images/Flag.png" alt="">
+                            </div>
                             <h4>VS</h4>
-                            <img src="images/germany Flag.png" alt="">
+                            <div class="match-img-2">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="match-bottom">
                             <h3>Germay VS France</h3>
@@ -68,9 +76,13 @@
                     </div>
                     <div class="match">
                         <div class="match-top">
-                            <img src="images/Flag.png" alt="">
+                            <div class="match-img-1">
+                                <img src="images/Flag.png" alt="">
+                            </div>
                             <h4>VS</h4>
-                            <img src="images/germany Flag.png" alt="">
+                            <div class="match-img-2">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="match-bottom">
                             <h3>Germay VS France</h3>
@@ -79,9 +91,13 @@
                     </div>
                     <div class="match">
                         <div class="match-top">
-                            <img src="images/Flag.png" alt="">
+                            <div class="match-img-1">
+                                <img src="images/Flag.png" alt="">
+                            </div>
                             <h4>VS</h4>
-                            <img src="images/germany Flag.png" alt="">
+                            <div class="match-img-2">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="match-bottom">
                             <h3>Germay VS France</h3>
@@ -90,9 +106,13 @@
                     </div>
                     <div class="match hidden-for-tablet">
                         <div class="match-top">
-                            <img src="images/Flag.png" alt="">
+                            <div class="match-img-1">
+                                <img src="images/Flag.png" alt="">
+                            </div>
                             <h4>VS</h4>
-                            <img src="images/germany Flag.png" alt="">
+                            <div class="match-img-2">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="match-bottom">
                             <h3>Germay VS France</h3>
@@ -101,9 +121,13 @@
                     </div>
                     <div class="match hidden-for-tablet">
                         <div class="match-top">
-                            <img src="images/Flag.png" alt="">
+                            <div class="match-img-1">
+                                <img src="images/Flag.png" alt="">
+                            </div>
                             <h4>VS</h4>
-                            <img src="images/germany Flag.png" alt="">
+                            <div class="match-img-2">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="match-bottom">
                             <h3>Germay VS France</h3>
